fix footer on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,11 @@ with preview of previous and next slide */
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.FooterText {
+  color: #FFFFFF !important;
+
+}
+
 .Footer div.divider {
   background: #969696;
   border: 1px solid #969696;
